Fix timetable not being scrollable on mobile - Thanks Vincenzo!

--- a/webroot-rich/style.css
+++ b/webroot-rich/style.css
@@ -75,8 +75,9 @@ Layout styles
 
 .container
 {
-	max-width: 70em;
+	max-width: 82em;
 	margin: 0 auto;
+	overflow-x: auto;
 }
 
 .header
